--- a/config-server/.gitignore
+++ b/config-server/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 target/
-.mvn/wrapper/maven-wrapper.jar
+!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -31,3 +31,13 @@ build/
 
 ### VS Code ###
 .vscode/
+
+src/main/resources/application.properties
+src/main/resources/*
+
+/src/main/resources/application.properties
+src/main/java/com/webanhang/team_project/config/initializer
+
+/target
+/ecommerce.iml
+/HELP.md
