--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -1,38 +1,28 @@
-# Stage 1: Build
+# syntax=docker/dockerfile:1
 FROM eclipse-temurin:21-jdk-alpine AS builder
 
 WORKDIR /app
 
-# Copy Maven wrapper và dependencies
+# Copy dependency files first
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
-
-# Cấp quyền thực thi
 RUN chmod +x ./mvnw
 
-# Download dependencies (cache layer)
-RUN ./mvnw dependency:go-offline
+# ✅ Cache Maven dependencies với BuildKit
+RUN --mount=type=cache,target=/root/.m2 \
+    ./mvnw dependency:go-offline -B
 
-# Copy source code
+# Copy source
 COPY src ./src
 
-# Build application (skip tests)
-RUN ./mvnw clean install -DskipTests
+# ✅ Build với cached dependencies
+RUN --mount=type=cache,target=/root/.m2 \
+    ./mvnw clean install -DskipTests -B
 
-# Stage 2: Runtime
+# Runtime stage
 FROM eclipse-temurin:21-jre-alpine
-
 WORKDIR /app
-
-# Copy jar từ builder
 COPY --from=builder /app/target/*.jar app.jar
 
-# Expose port 8083 (order-service port)
 EXPOSE 8083
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=60s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:8083/actuator/health || exit 1
-
-# Run application
 ENTRYPOINT ["java", "-jar", "app.jar"]
