--- a/eureka-server/Dockerfile
+++ b/eureka-server/Dockerfile
@@ -1,32 +1,28 @@
-# Stage 1: Build
+# syntax=docker/dockerfile:1
 FROM eclipse-temurin:21-jdk-alpine AS builder
 
 WORKDIR /app
 
-# Copy Maven wrapper và dependencies
+# Copy dependency files first
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
-
-# Cấp quyền thực thi
 RUN chmod +x ./mvnw
 
-# Copy source code
+# ✅ Cache Maven dependencies với BuildKit
+RUN --mount=type=cache,target=/root/.m2 \
+    ./mvnw dependency:go-offline -B
+
+# Copy source
 COPY src ./src
 
-# Xóa cache cũ và build lại
-RUN rm -rf /root/.m2/repository/com/fasterxml/jackson && \
-    ./mvnw clean install -DskipTests -U
+# ✅ Build với cached dependencies
+RUN --mount=type=cache,target=/root/.m2 \
+    ./mvnw clean install -DskipTests -B
 
-# Stage 2: Runtime
+# Runtime stage
 FROM eclipse-temurin:21-jre-alpine
-
 WORKDIR /app
-
 COPY --from=builder /app/target/*.jar app.jar
 
 EXPOSE 8761
-
-HEALTHCHECK --interval=30s --timeout=3s --start-period=60s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:8761/actuator/health || exit 1
-
 ENTRYPOINT ["java", "-jar", "app.jar"]
