--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -1,38 +1,28 @@
-# Giai đoạn 1: Build ứng dụng bằng Maven
+# syntax=docker/dockerfile:1
 FROM eclipse-temurin:21-jdk-alpine AS builder
 
 WORKDIR /app
 
-# Sao chép các file cần thiết để tải dependency trước
+# Copy dependency files first
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
-
-# Cấp quyền thực thi cho mvnw
 RUN chmod +x ./mvnw
 
-# Tải dependencies (layer caching)
-RUN ./mvnw dependency:go-offline
+# ✅ Cache Maven dependencies với BuildKit
+RUN --mount=type=cache,target=/root/.m2 \
+    ./mvnw dependency:go-offline -B
 
-# Sao chép toàn bộ mã nguồn
+# Copy source
 COPY src ./src
 
-# Build ứng dụng ra file .jar, bỏ qua test
-RUN ./mvnw clean install -DskipTests
+# ✅ Build với cached dependencies
+RUN --mount=type=cache,target=/root/.m2 \
+    ./mvnw clean install -DskipTests -B
 
-# Giai đoạn 2: Runtime
+# Runtime stage
 FROM eclipse-temurin:21-jre-alpine
-
 WORKDIR /app
-
-# Copy jar từ builder stage
 COPY --from=builder /app/target/*.jar app.jar
 
-# Expose port 8082 (port của product-service)
 EXPOSE 8082
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=60s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:8082/actuator/health || exit 1
-
-# Chạy ứng dụng
 ENTRYPOINT ["java", "-jar", "app.jar"]
