--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
         - id: user-service-route
           uri: lb://user-service
           predicates:
-            - Path=/api/v1/auth/**, /api/v1/users/**
+            - Path=/api/v1/auth/**, /api/v1/users/**, /api/v1/interactions/**
           filters:
             - StripPrefix=0
             - Authentication
